# stonks

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.dev  Dockerfile.trainer  README.md  cliff.toml  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run.sh
.github/workflows/: ci.yml  docs.yml  frontend.yml  release.yml
docs/: Makefile  conf.py  contributing.md  getting-started.md  index.md  rest-api.md  self-hosting.md
docs/_static/: custom.css
docs/brainstorms/: 2026-03-01-whats-next-brainstorm.md  2026-03-12-multi-machine-sync-brainstorm.md
docs/plans/: 2026-02-23-feat-stable-api-surface-plan.md  2026-02-24-feat-multi-run-metric-overlay-plan.md  2026-02-24-fix-scroll-reset-on-sse-update-plan.md  2026-03-12-001-feat-multi-machine-db-sync-plan.md
docs/user-guide/: configuration.md  index.md  lightning.md  querying.md  server.md  tracking.md
examples/: fake_trainer.py
plans/: feat-ml-experiment-tracker-mvp.md  feat-sphinx-documentation.md
scripts/: release.py  seed_data.py
stonks/: __init__.py  buffer.py  cli.py  config.py  demo.py  distributed.py  exceptions.py  hardware.py  lightning.py  logging_config.py  models.py  run.py  store.py
stonks/server/: __init__.py  app.py  dependencies.py  downsampling.py
stonks/store/: __init__.py  connection.py  experiments.py  metrics.py  projects.py  runs.py
stonks/sync/: __init__.py  config.py  daemon.py  merge.py
tests/: conftest.py
tests/e2e/: test_stonks_logger.py
tests/integration/: test_full_workflow.py  (+5 more)
ui/: index.html  package.json  vite.config.ts
(+36 files in other folders)
