[project]
name = "stonks"
version = "0.1.0"
description = "Lightweight ML experiment tracking"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "loguru>=0.7",
    "psutil>=5.9",
]

[project.optional-dependencies]
lightning = ["lightning>=2.0"]
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.0",
]
gpu = ["nvidia-ml-py>=12.0"]
all = ["stonks[lightning,server,gpu]"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "ty",
    "pre-commit>=4.0",
]
docs = [
    "sphinx>=8.0",
    "pydata-sphinx-theme>=0.16",
    "sphinx-autodoc2>=0.5",
    "sphinx-copybutton>=0.5",
    "sphinx-design>=0.6",
    "myst-parser>=4.0",
]

[project.scripts]
stonks = "stonks.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "PLC0415"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["stonks"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLC0415"]
"stonks/cli.py" = ["PLC0415"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ty.environment]
python-version = "3.11"
